fixing focus visibility on form-submit buttons fix #163

--- a/css/open_framework.css
+++ b/css/open_framework.css
@@ -47,7 +47,8 @@ input, select, .chzn-container { max-width: 100%; }
 .form-type-checkbox label { display:inline-block; margin-left:8px; }
 input[type="checkbox"] { margin:0; }
 input.form-submit { height:2.5em; border:1px solid #d5d5d5; -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px; background-image:-webkit-linear-gradient(top, #fff 0%, #e6e6e6 100%); background-image:-ms-linear-gradient(top, #fff 0%, #e6e6e6 100%); background-image:-moz-linear-gradient(top, #fff 0%, #e6e6e6 100%); background-image:-o-linear-gradient(top, #fff 0%, #e6e6e6 100%); background-image:webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #e6e6e6)); background-image:linear-gradient(to bottom, #fff 0%, #e6e6e6 100%); }
-input.form-submit:hover { background-image:-webkit-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-ms-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-moz-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-o-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #f5f5f5), color-stop(1, #e6e6e6)); background-image:linear-gradient(to bottom, #f5f5f5 0%, #e6e6e6 100%); }
+input.form-submit:hover, input.form-submit:focus { background-image:-webkit-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-ms-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-moz-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-o-linear-gradient(top, #f5f5f5 0%, #e6e6e6 100%); background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #f5f5f5), color-stop(1, #e6e6e6)); background-image:linear-gradient(to bottom, #f5f5f5 0%, #e6e6e6 100%); }
+input.form-submit:focus { border: 1px dotted #333; }
 input.btn-search { width:26px; height:26px; border:0 none; background:none repeat scroll 0 0 transparent; }
 input.btn-search:hover { opacity:.6; filter: alpha(opacity=60); background:none repeat scroll 0 0 transparent; }
 input.placeholder, textarea.placeholder { color: #aaa; }
